# gremlin-soccer

./: 3d_upd2.cpp  3dbnull.h  3deng.cpp  3deng.h  CMakeLists.txt  actions.cpp  andydefs.h  animlink.h  audio.h  ball.cpp  ballint.cpp  basemem.h  calldef.h  cgdv.h  config.h  control.cpp  control.h  data.cpp  data.equ  data.h  defines.h  defs.h  digi.h  display.cpp  editor.cpp  euro.equ  euro_cmd.cpp  euro_cmd.h  euro_cnt.cpp  euro_cnt.h  euro_def.h  euro_dsk.cpp  euro_dsk.h  euro_fix.cpp  euro_fix.h  euro_fxd.h  euro_gdv.cpp  euro_gdv.h  euro_gen.cpp  euro_gen.h  (+93 more)
archive/: frontend.equ  gamedata.cpp  mac vars.h  make vars.h  resources.h  results.h  sprite defines.h
archive/3D Engine/: 3d Stuff  3deng.c  3deng.c Hires  3deng.c Rave  3deng.h  8086 To PPC.h  ADEFINES.H  DEFINES.H  DEFS.H  Data.c  Data.h  FGFX.C  FILES.C  FOOTY.INC  Render.c  Render.c copy  Render.h
archive/Actua Mac Stuff/: AEHandler.c  AEHandler.h  Actua.Soccer.c  Actua.Soccer.h  Apple Menu.c  Apple Menu.h  Blitter.c  Blitter.h  Event.c  Event.h  Failure.c  Failure.h  FileUtils.c  FileUtils.h  Init.c  Init.h  Resource.c  Resource.h  StringUtils.c  StringUtils.h  Vbl.cpp  Vbl.h  error.h
archive/Andys/: 3D_upd2.cpp  3D_upd2.h  A Data.h  A Front.h  A Unwritten.h  Actions.cpp  Actions.h  Andy Menu.h  Andys Defines.h  Andys Externs.h  Andys Vars.h  Andys.lib  Ball.cpp  Ball.dta  Ball.h  Ballint.cpp  Ballint.h  Display.cpp  Display.h  FDEFS.H  Football.cpp  Football.h  GLOB_SV.H  GLOB_VAR.H  Intell.cpp  Intell.h  Main.c  Maths.cpp  (+11 more)
audio/: audio.cpp  audio.h
legacy/: animlink.h  old_gen.cpp  oldspt.cpp
(+100 files in other folders)
